style.css
/* General */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --bg-color: #000;
    --main-color: #8257e5;
    --main-color-second: #fff;
    --color-shadown: #000;
}

body {
    /*background-color: var(--bg-color);*/
    color: var(--main-color-second);
    font-family: 'Manrope', sans-serif;
}

.container {
    max-width: 918px;
    margin: 0 auto;
}

h1 {
    font-size: 5rem;
}

.button {
    color: var(--main-color-second);
    background-color: transparent;
    padding: 0.625rem 1.875rem;
    border: 1px solid var(--main-color);
    border-radius: 0.25rem;
    cursor: pointer;
    text-transform: uppercase;
    font-size: 0.69rem;
    transition: all 0.4s linear;
}

.button:hover {
    background-color: var(--main-color);
    transition: all 0.4s linear;
}

a {
    color: var(--main-color-second);
    text-decoration: none;
}

/* Header */

.header--area {
    position: relative;
}
.header {
    height: 80px;
    display: flex;
    align-items: center;
    width: 100%;
    position: absolute;
}
.header--left {
    width: 200px;
    text-align: center;
}
.header--center {
    flex: 1;
    font-size: 0.875rem;
}
.header--center ul {
    list-style: none;
    display: flex;
    gap: 1.25rem;
}
.header--center .menu {
    display: flex;
    justify-content: center;
}
.header--center .menu-mobile {
    display: none;
}
.header--right {
    width: 200px;
    display: flex;
    justify-content: end;
}


/* Main area */

.main--area {
    position: relative;
    z-index: -2;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--bg-color);
}
.main--area::before {
    content: "";
    width: 300px;
    height: 300px;
    background-color: var(--main-color);
    filter: blur(150px);
    position: absolute;
    right: 0;
    top: 0;
    z-index: -1;
}
.main--area::after {
    content: "";
    width: 300px;
    height: 300px;
    background-color: var(--main-color);
    filter: blur(150px);
    position: absolute;
    left: 0;
    bottom: 0;
    z-index: -1;
}
.main--area .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: end;
    min-height: inherit;
}
.main--area .content .great-code {
    color: transparent;
    /*-webkit-text-stroke: 2px rgb(130, 87, 229);
    font-family: sans-serif;*/
    text-shadow: -1px -1px 0 var(--color-shadown),
        -2px -2px 0px var(--main-color),
        -1px 1px 0 var(--main-color),
        0px -2px 0 var(--main-color);
}
.main--area .content .content--mobile {
    display: none;
}
.main--area .content .content--mobile p {
    margin-bottom: 20px;
    text-align: center;
}
.main--area .content img {
    width: 100%;
    position: relative;
    bottom: 0;
}

/* responsive */

@media (max-width: 1024px) {
    .container {
        padding: 0 1.5rem;
    }
    .header--left {
        text-align: left;
    }
}

@media (max-width: 900px) {
    h1 {
        font-size: 4.8rem;
    }
    .header--right {
        display: none;
    }
    .header--center .menu {
        justify-content: end;
    }
}

@media (max-width: 768px) {
    h1 {
        font-size: 3.8rem;
    }
    .header--center .menu {
        display: none;
    }

    .main--area .content .content--mobile {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 70%;
    }

    .main--area .content .content--mobile p {
        font-size: 1.875rem;
    }

    .main--area .content img {
        width: 80%;
    }
}

